--- a/price_compare/look/templates/pages/productDetail.html
+++ b/price_compare/look/templates/pages/productDetail.html
@@ -173,6 +173,28 @@
                 </div>
                 
                 </div>
+                
+                <div class="share">                        
+                    <select name="shareMedia" id="shareMedia" class="shareMedia">
+                        <option value="#">Share via: </option>
+                        <option value="fbk">Facebook</option>
+                        <option value="wthp">Whatsapp</option>
+                        <option value="email">E-mail</option>
+                    </select>
+
+                    
+                    <button class="btn" data-share>SHARE</button>
+                    
+                </div>
+                <button class="btn" data-logout="logout">LOGOUT</button>
+                <div id="mail-share">
+                    <a href="mailto:?subject=Awesome Price Comparision App&amp;body=Check out this site http://hoyindamola.pythonanywhere.com."
+                title="Share by Email" id="mailSh">click to share via E-mail</a>
+                </div>
+                
+                </div>
+                
+            </div>
 
         </section>
 
