--- a/price_compare/look/templates/pages/signup.html
+++ b/price_compare/look/templates/pages/signup.html
@@ -40,6 +40,7 @@
                     </div>
                     <div class="inputBx">
                     <p>Already have an account? <a href={% url "login" %}>Log in</a></p>
+                    <!-- <span>Return home <a href={% url "home" %}>Home</a></span> -->
                     </div>
                 </form>
             </div>
