update doc html

--- a/price_compare/look/templates/pages/docs.html
+++ b/price_compare/look/templates/pages/docs.html
@@ -87,7 +87,7 @@
             <div class="top">
                 <div class="overview">
                     <h1>Overview</h1>
-                    <p>Price compare is a platform that helps you to  compare prices of gadget (mobile phone) and accessories across multiple online shops and aids users make decisions on buying based on their budget.</p>
+                    <p>Look app is a platform that helps you to  compare prices of gadget (mobile phone) and accessories across multiple online shops and aids users make decisions on buying based on their budget.</p>
                 </div>
                 <div class="overview-img">
                     <img src={% static "img/overview1.png" %} alt="" class="overview-img1"> <img src={% static "img/overview2.png" %} alt="" class="overview-img2"> <img src={% static "img/overview3.png" %} alt="" class="overview-img3">
